welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:35: error: not found: value c
		if (getCouleurSol()==c:Color) {
                                     ^SlugSnail:35: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
		if (getCouleurSol()==c:Color) {
                                      ^